feat(代码生成器): 增加sql转mapper的功能